Added temp fix for netty under java 11 to access jdk unsafe libraries